--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "appwrite": "^11.0.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
@@ -37,5 +39,8 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
